DefinitionEditor: - fix form z-index

--- a/QA.ProductCatalog.Admin.WebApp/ReactViews/DefinitionEditor/Components/XmlEditor/Style.scss
+++ b/QA.ProductCatalog.Admin.WebApp/ReactViews/DefinitionEditor/Components/XmlEditor/Style.scss
@@ -5,7 +5,7 @@
     position: fixed;
     width: 100%;
     height: 100%;
-    z-index: 20;
+    z-index: 199;
     background-color: $white;
   }
 }
